[package]
name = "clocking"
version = "0.4.0"
edition = "2021"
authors = ["Crane Jin<crane@cranejin.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["std", "clock"] }
clap = { version = "4.1.1", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
