[package]
name = "clocking"
version = "0.7.0"
description = "A time hacking tool."
edition = "2021"
authors = ["Crane Jin <crane@cranejin.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["std", "clock", "serde"] }
clap = { version = "4.1.1", features = ["derive", "cargo"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rust-embed = "6.4.2"
serde = { version = "1.0.152", features = ["derive"] }
